--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: 肖航课题组  Xiao Research Group
-url: https://xiaohang007.github.io/
+name: 赵孔路的网页  Website of Zhao 
+url: https://zhaokonglu22.github.io/
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
